# NoteWhisper

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_ml.txt  setup.cfg  setup.py  template.py  tox.ini
.github/workflows/: ci.yml  upload-python-package.yml
src/NoteWhisper/: __init__.py  cli.py  exceptions.py  keypoints.py  logger.py  quiz.py  summarization.py  test_logger_exception.py  transcription.py  youtube_renderer.py
tests/: __init__.py
