[metadata]
name = NoteWhisper
version = 0.0.1
author = maria2021831011
author_email = ritukhan534@gmail.com
description = Convert lecture audio into structured notes (Bangla/English)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/maria2021831011/NoteWhisper
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
packages = find:
package_dir =
    = src
install_requires =
    click>=8.1.0
    SpeechRecognition>=3.8.1
    pydub>=0.25.1
    torch>=2.1.0
    transformers>=4.34.0
    openai>=1.0.0
python_requires = >=3.10

[options.extras_require]
dev =
    pytest>=8.3.2
    mypy>=1.5.1
    flake8>=6.1.0
    tox>=3.25.1
    black>=24.3.0
    isort>=6.0.0
    pre-commit>=3.4.0
    mkdocs-material

[options.package_data]
NoteWhisper = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py, tests/*
